# cbutler

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  main  run.sh
+/: CMakeCache.txt
.cache/clangd/index/: core.h.63EB38ACB72CEA38.idx  fs.cpp.94F3EA11BDF711C4.idx  fs.h.78277141F0C0361A.idx  main.cpp.C0C03CBAE5C60C4F.idx  process.cpp.393D1C4055BAB8A9.idx  process.cpp.5BC074C1A25EB567.idx  process.h.E86F37A0DDF21FCB.idx  process.hpp.BF3A4CB46B594CB0.idx  process_unix.cpp.37F6C4B67E1DD4EE.idx  subcommand.cpp.88A9C606075A644F.idx  subcommand.h.A73C98EDA546210C.idx
include/: subcommand.h
include/core/: butlerxml.h  cmake.h  config.h  core.h  fs.h  process.h  scaffold.h  scaffolding.h  str.h
sandbox/: CMakeLists.txt
sandbox/sandbox/: CMakeLists.txt
sandbox/sandbox/+/: CMakeCache.txt
sandbox/src/: main.cpp
sandbox/src/utils/: CMakeLists.txt
scaffolds/blank/: CMakeLists.txt
scaffolds/blank/src/: main.cpp
scaffolds/full/: CMakeLists.txt
scaffolds/mod/: CMakeLists.txt
src/: main.cpp  subcommand.cpp
src/core/: CMakeLists.txt  butlerxml.cpp  cmake.cpp  config.cpp  core.cpp  fs.cpp  process.cpp  scaffold.cpp  scaffolding.cpp  str.cpp
